Вторая домашняя работа

--- a/Homework1/index.html
+++ b/Homework1/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Сколько градусов по Фаренгейту?</title>
+    <title>Почему код выдает именно эти результаты.</title>
 </head>
 <body>
 
