--- a/Homework5/index.html
+++ b/Homework5/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Счастливый билет.</title>
+    <title>Функция с тремя параметрами.</title>
 </head>
 <body>
 
