Вторая домашняя работа

--- a/Homework2/index.html
+++ b/Homework2/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Чему равны переменные "x" и "a"</title>
+    <title>FOR с пустым телом</title>
 </head>
 <body>
 
