--- a/Homework3/index.html
+++ b/Homework3/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Две переменные "a" и "b".</title>
+    <title>Горка.</title>
 </head>
 <body>
 
