--- a/Homework4/index.html
+++ b/Homework4/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>4 арифметические операции.</title>
+    <title>Простые числа.</title>
 </head>
 <body>
 
